--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -27,11 +27,13 @@
 
 	      <div id="logo">
 	        {% block logo %}
+	          <a href="/"><img src="/{{ MEDIA_URL }}spaces/logos/logo.png"/></a>
 	        {% endblock %}
 	      </div>
 
 	      <div id="banner">
 	        {% block banner %}
+	          <img src="/{{ MEDIA_URL }}spaces/banners/banner_index.png"/>
 	        {% endblock %}
 	      </div>
 
