--- a/src/e_cidadania/apps/spaces/templates/spaces/index.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/index.html
@@ -17,6 +17,12 @@
         {% for news in publication %}
           {% if news.post_pub_index %}
             <div class="post">
+              {% if user.is_staff %}
+                <div id="tools">
+                  <a href="{{ request.path }}edit/">{% trans "Edit" %}</a> |
+                  <a href="{{ request.path }}delete/">{% trans "Delete" %}</a>
+                </div>
+              {% endif %}
               <h1>{{ news.post_title }}</h1>
               <p>{{ news.post_message }}</p>
               <p>{% trans "Written by" %} {{ news.post_author }} {% trans "on" %} {{ news.post_pubdate }}</p>
