--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -27,7 +27,7 @@
 
 	      <div id="logo">
 	        {% block logo %}
-	          <a href="/"><img src="/{{ MEDIA_URL }}spaces/logos/logo.png"/></a>
+	          <a href="/"><img src="/{{ MEDIA_URL }}spaces/logos/logo_index.png"/></a>
 	        {% endblock %}
 	      </div>
 
