Minor fixes to language switcher and styling

--- a/src/e_cidadania/static/css/screen.css
+++ b/src/e_cidadania/static/css/screen.css
@@ -185,6 +185,12 @@ input[type="text"], input[type="password"] {
     border-radius: 5px;
 }
 
+#userbar form select {
+    background: #222;
+    border: none;
+    color: #EDEDED;
+}
+
 #centercol {
     float: left;
     padding: 15px;
