--- a/src/e_cidadania/templates/menu.html
+++ b/src/e_cidadania/templates/menu.html
@@ -3,12 +3,14 @@
     <ul class="topnav">
       <li><a href="/">{% trans "Home" %}</a> | </li>
       <li>
-        <a href="/none">{% trans "Language" %}</a>
-        <ul class="subnav">
-          <li>Español</li>
-          <li>Gallego</li>
-          <li>Inglés</li>
-        </ul>
+        <form action="/i18n/setlang/" method="post">{% csrf_token %}
+          <input name="next" type="hidden" value="/" />
+          <select name="language" onchange="this.form.submit()">
+            {% for lang in LANGUAGES %}
+              <option value="{{ lang.0 }}">{{ lang.1 }}</option>
+            {% endfor %}
+          </select>
+        </form>
       </li>
       <li>
         <a href="/accounts/" class="username">
