--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -71,8 +71,8 @@
            <a href="http://www.w3.org">xml</a>
         </p>
 	    {% endblock %}
-        <p>(c) 2010-{% now "Y" %} <a href="http://trac.cidadania.coop">e-cidadania</a> creado por <a href="http://www.cidadania.coop">Cidadania Sociedade Cooperativa</a></p>
-        <p>Garantimos que este programa non tomará conciencia e se apoderará do mundo.</p>
+        <p>(c) 2010-{% now "Y" %} <a href="http://trac.cidadania.coop">e-cidadania</a> {% trans "created by" %} <a href="http://www.cidadania.coop">Cidadania Sociedade Cooperativa</a></p>
+        <p>{% trans "We guarantee that this program will not become aware and take over the world" %}</p>
     </div>
 	</body>
 </html>
