--- a/src/e_cidadania/templates/menu.html
+++ b/src/e_cidadania/templates/menu.html
@@ -2,16 +2,19 @@
   {% if user.is_authenticated %}
     <ul class="topnav">
       <li><a href="/">{% trans "Home" %}</a> | </li>
+
       <li>
         <form action="/i18n/setlang/" method="post">{% csrf_token %}
           <input name="next" type="hidden" value="/" />
           <select name="language" onchange="this.form.submit()">
+            <option>{% trans "Language" %}</option>
             {% for lang in LANGUAGES %}
               <option value="{{ lang.0 }}">{{ lang.1 }}</option>
             {% endfor %}
           </select>
         </form>
       </li>
+      
       <li>
         <a href="/accounts/" class="username">
           {% if user.get_profile.firstname %}
