Added index images and tuenti logo

--- a/src/e_cidadania/templates/site_index.html
+++ b/src/e_cidadania/templates/site_index.html
@@ -9,7 +9,7 @@
   <div id="centercol">
 
     <div>
-      <p><span class="introtitle">e-cidadania</span> democracias participativas 2.0</p><br /><br />
+      <p><img src="/{{ MEDIA_URL }}assets/indextitle.png" /></p><br /><br />
       <p class="intro">e-cidadania es una herramienta de democracia participativa para
          ciudadanos. Tiene sistema de debates, propuestas, versionado de
          documentos, creación de espacios específicos para cada cliente,
@@ -82,7 +82,9 @@
       <img src="/{{ MEDIA_URL }}assets/logos/rss_logo.png" alt="Feed RSS"/>
       <a href="http://www.facebook.com/cidadania.coop"><img src="/{{ MEDIA_URL }}assets/logos/facebook_logo.png" alt="Facebook"/></a>
       <a href="http://www.twitter.com/ecidadaniafloss"><img src="http://twitter-badges.s3.amazonaws.com/t_logo-b.png" alt="Seguir a ecidadaniafloss en Twitter"/></a>
+      <a href="http://tuenti.com"><img src="/{{ MEDIA_URL }}assets/logos/tuenti_logo.png" alt="Compartir en Tuenti"/></a>
       <a href="http://identi.ca/ecidadania"><img src="/{{ MEDIA_URL }}assets/logos/identica_logo.png" alt="Compartir en Identi.ca"/></a>
+      {% trans "If you are in another netkwork, please tell us!" %}
     </div>
 
     <div id="widget">
