Added LinkedIn logo to share sites

--- a/src/e_cidadania/templates/site_index.html
+++ b/src/e_cidadania/templates/site_index.html
@@ -83,6 +83,7 @@
       <a href="http://www.facebook.com/cidadania.coop"><img src="/{{ MEDIA_URL }}assets/logos/facebook_logo.png" alt="Facebook"/></a>
       <a href="http://www.twitter.com/ecidadaniafloss"><img src="http://twitter-badges.s3.amazonaws.com/t_logo-b.png" alt="Seguir a ecidadaniafloss en Twitter"/></a>
       <a href="http://tuenti.com"><img src="/{{ MEDIA_URL }}assets/logos/tuenti_logo.png" alt="Compartir en Tuenti"/></a>
+      <a href="http://linkedin.com"><img src="/{{ MEDIA_URL }}assets/logos/linkedin_logo.png" alt="Compartir en LinkedIn"/></a>
       <a href="http://identi.ca/ecidadania"><img src="/{{ MEDIA_URL }}assets/logos/identica_logo.png" alt="Compartir en Identi.ca"/></a>
       <p><br />{% trans "Your favourite social site isn't here? Tell us!" %}</p>
     </div>
