--- a/src/e_cidadania/apps/spaces/templates/spaces/index.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/index.html
@@ -12,17 +12,21 @@
 
   {% block centercol %}
     <div id="centercol">
-      
+      {% if user.is_staff %}
+        <div id="tools">
+          <a href="{{ request.path }}edit/">{% trans "Edit space" %}</a> |
+          <a href="{{ request.path }}delete/">{% trans "Delete space" %}</a> |
+          <a href="{{ request.path }}news/add"}>{% trans "Add news" %}</a>
+        </div>
+      {% endif %}
       {% if get_place.mod_news %}
         {% for news in publication %}
           {% if news.post_pub_index %}
             <div class="post">
-              {% if user.is_staff %}
-                <div id="tools">
-                  <a href="{{ request.path }}edit/">{% trans "Edit" %}</a> |
-                  <a href="{{ request.path }}delete/">{% trans "Delete" %}</a>
-                </div>
-              {% endif %}
+              <div id="tools">
+                <a href="news/edit/{{ news.id }}">Edit</a> |
+                <a href="news/delete/{{ news.id }}">Delete</a>
+              </div>
               <h1>{{ news.post_title }}</h1>
               <p>{{ news.post_message }}</p>
               <p>{% trans "Written by" %} {{ news.post_author }} {% trans "on" %} {{ news.post_pubdate }}</p>
@@ -38,13 +42,13 @@
             <p>{% trans "Nothing published yet." %}</p>
           </div>
         {% endfor %}
-      {% endif %}      
+      {% endif %}
     </div>
   {% endblock %}
 
   {% block rightcol %}
     <div id="rightcol">
-    
+
         {% if get_place.mod_docs %}
         <div id="widget">
           <h2>Documentos</h2>
@@ -57,7 +61,7 @@
           </ul>
         </div>
         {% endif %}
-        
+
         {% if get_place.mod_cal %}
         <div id="widget">
           <h2>Calendario</h2>
@@ -75,3 +79,4 @@
   <p>{% for e in entities %} {{e.name}} - {% endfor %}</p>
   <p>Espacio creado por: {{ user.get_profile.firstname }} {{ user.get_profile.surname }} el {{ get_place.date|date:"j/m/Y G:i"}}</p>
 {% endblock %}
+
