--- a/src/e_cidadania/templates/404.html
+++ b/src/e_cidadania/templates/404.html
@@ -9,33 +9,66 @@
 		<meta name="Robots" content="all"/>
 		
 		<style type="text/css">
-		  #message {
+		  body {
+		    /* background: #A8D4FF; /* AZUL */
 		    font-family: arial;
-		    font-size: 2em;
 		    color: #5d5d5d;
-		    text-shadow: #888 -1px 1px 3px;
-		    position: absolute;
-		    height: 300px;
-		    width: 500px;
-		    padding: 20px;
-		    left: 50%;
-		    top: 50%;
-		    margin-left: -250px;
-		    margin-top: -200px;
-		    -webkit-border-radius: 20px;
-        -moz-border-radius: 20px;
-        border-radius: 20px;
-        border: 1px dashed #888;
 		  }
-		 #message h1 {
-		  text-align: right;
-		 }
+		  
+		  a {
+		    color: #5d5d5d;
+		    text-decoration: none;
+		  }
+		  
+		  a:visited {
+		    color: #333;
+		  }
+		  #bottom {
+		    position:fixed;
+		    bottom: 0;
+		    left: 0;
+		    background: #000;
+		    width: 100%;
+		    height: 200px;
+		  }
+		  
+		  #bottom .text {
+		    padding-top: 10px; 
+		    width: 60%;
+		    margin: auto;
+		    font-size: 1em;
+		  }
+
+		  #title {
+		    font-size: 8em;
+		    text-align: right;
+		    position: absolute;
+		    bottom: 175px;
+		    right: 0;
+		    text-align: right;
+		    text-shadow: #888 -1px 1px 3px;
+		    color: #5d5d5d;
+		  }
+		  
+		  #out {
+		    
+		  }
 		</style>
 	</head>
 	<body>
-	  <div id="message">
-	    <h1>404 <span style="font-size: 20px">Not Found!</span></h1>
-	    <p>{% trans "A meiga stole this page, you better not mess with her! For that we provide you an exit" %}<a href="/">...</a></p>
+	  <a href="http://www.clipartpal.com/clipart_pd/holiday/halloween/witchesbroom_10597.html"><img src="http://www.clipartpal.com/_thumbs/pd/holiday/halloween/witch_on_broom_01.png" width="130" height="120" border="0" alt="Clip art of a silhouette of a black witch flying on a broom on Halloween, Click here to get more Free Clipart at ClipartPal.com"></a>
+	  <div id="title"><span style="font-size:45px;">{% trans "Not Found!" %} </span><strong>404</strong></div>
+	  <div id="bottom">
+	    <p class="text">
+	      <em>{% trans "A meiga stole this page. You better get out of here now that you can, before she gives you the evil eye. Meanwhile, we are going to get the torchs and pitchforks and go in search of her. Don't worry about us, we will manage somehow." %}</em><br /><br />
+	      <strong>{% trans "Take me out of here!" %}</strong><br /><br />
+	      <a href="http://ecidadania.org">{% trans "Home" %}</a> | 
+	      <a href="http://dev.ecidadania.org">{% trans "Development" %}</a> |
+	      <a href="#">{% trans "Help" %}</a> |
+	      <a href="#">{% trans "Terms of service" %}</a> |
+	      <a href="#">{% trans "Privacy" %}</a> |
+	      <a href="#">{% trans "About" %}</a>
+	    </p>
 	  </div>
   </body>
 </html>
